nobase_pkginclude_HEADERS = \
	composite.hpp \
	RuleTraits.hpp \
	StreamIterator.hpp \
	Result.hpp \
	Cursor.hpp \
	TokenRule.hpp \
	AlternativeRule.hpp \
	ProxyRule.hpp \
	PredicateRule.hpp \
	CatchingRule.hpp \
	ReduceRule.hpp \
	LogRule.hpp \
	OptionalRule.hpp \
	JoinRule.hpp \
	SharedRule.hpp \
	LazyRule.hpp \
	MultipleRule.hpp
