# Fundamental types
nobase_pkginclude_HEADERS = \
	StreamIterator.hpp \
	Result.hpp \
	Node.hpp \
	Cursor.hpp

# Rule headers
nobase_pkginclude_HEADERS += \
	rule/composite.hpp \
	rule/RuleTraits.hpp \
	rule/Token.hpp \
	rule/Alternative.hpp \
	rule/Proxy.hpp \
	rule/Predicate.hpp \
	rule/Catching.hpp \
	rule/Reduce.hpp \
	rule/Log.hpp \
	rule/Optional.hpp \
	rule/Join.hpp \
	rule/Shared.hpp \
	rule/Lazy.hpp \
	rule/Multiple.hpp \
	rule/Operation.hpp

# Grammar headers
nobase_pkginclude_HEADERS += \
	grammar/Grammar.hpp \
	grammar/pass/LeftRecursion.hpp \
	grammar/pass/Flatten.hpp
